---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterTableStmt(
                    AlterTableStmt {
                        cmds: [
                            AlterTableCmd(
                                AlterTableCmd {
                                    subtype: ColumnDefault,
                                    name: Some(
                                        "column_name",
                                    ),
                                    def: Some(
                                        SQLValueFunction(
                                            Object({
                                                "location": Number(
                                                    73,
                                                ),
                                                "op": Number(
                                                    3,
                                                ),
                                                "typmod": Number(
                                                    -1,
                                                ),
                                            }),
                                        ),
                                    ),
                                    behavior: Restrict,
                                    missing_ok: false,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "table_name",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 21,
                            },
                        ),
                        relkind: Table,
                        missing_ok: false,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    90,
                ),
            },
        ),
    ],
)
